--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
    
     <h1> Hiii </h1>
-   <script src="index.js"> </script>
+    <h1>This is Danish </h1>
+   <script src="operators.js"> </script>
     
 </body>
 </html>
